change_in_padding

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </div>
         </div>
 
-        <div class="container-fluid contentIntro">
+        <div class="contentIntro">
             <div class="contentText py-md-5 py-0 d-flex flex-column align-items-center">
                 <h1 class=" sameHeading fs-1">Get It Done With A Freelancer </h1>
                 <div class="mobileImage d-md-none d-block">
