--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
         <div class="categoryHeading sameHeading text-center">
             Build a pool of trusted experts for your team
         </div>
-        <div class="subheadingCategory my-2 d-md-block d-none sans">Lorem ipsum dolor sit amet consectetur, adipisicing
+        <div class="subheadingCategory my-2 d-md-block d-none sans fs-5">Lorem ipsum dolor sit amet consectetur, adipisicing
             elit. Exercitationem
             deseruntm Lorem ipsum dolor sit amet</div>
         <div class="categoryCards d-flex flex-wrap align-items-between justify-content-between pt-5 mb-5">
@@ -282,7 +282,7 @@
     <div class="workStep d-flex flex-column  justify-content-center align-items-center">
 
         <div class="workHeading sameHeading">How it Works ?</div>
-        <div class="workSubtext d-md-block d-none mt-3 sans">Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+        <div class="workSubtext d-md-block d-none mt-3 sans fs-5">Lorem ipsum, dolor sit amet consectetur adipisicing elit.
         </div>
 
         <div class="workCard d-flex flex-md-row   flex-column justify-content-center align-items-center  mt-5">
@@ -331,7 +331,7 @@
         <div class="headingPlan sameHeading d-md-block d-none  fs-2 mb-2 mt-1">Choose a plan that works for you </div>
         <div class="headingPlan sameHeading d-md-none d-block  fs-2 mb-2 mt-1">Choose a plan </div>
 
-        <div class="subtextPlan sans d-md-block d-none">Lorem, ipsum dolor sit amet consectetur adipisicing elit Ipsum
+        <div class="subtextPlan sans d-md-block d-none fs-5">Lorem, ipsum dolor sit amet consectetur adipisicing elit Ipsum
             dolor sit amet </div>
 
         <div
